--- a/clients.html
+++ b/clients.html
@@ -3,20 +3,22 @@
 <head>
   <meta charset="UTF-8" />
   <title>Solarion.Media — Контакты</title>
-
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <!-- GOOGLE FONT -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
 
   <!-- GOOGLE ANALYTICS
-       ⚠️ ЗАМЕНИ G-XXXXXXXXXX, ИНАЧЕ НЕ СЧИТАЕТ -->
+       ⚠️ ОБЯЗАТЕЛЬНО ЗАМЕНИ G-XXXXXXXXXX
+       ИНАЧЕ АНАЛИТИКА НЕ РАБОТАЕТ -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXXXXX"></script>
   <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-    gtag('config', 'G-XXXXXXXXXX');
+    if (typeof window !== "undefined") {
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-XXXXXXXXXX');
+    }
   </script>
 
   <style>
@@ -25,20 +27,19 @@
       --card: #16161d;
       --text: #ffffff;
       --muted: #9a9aab;
-      --glow: rgba(114, 144, 255, 0.25);
+      --glow: rgba(114,144,255,.25);
     }
 
     * {
-      box-sizing: border-box;
       margin: 0;
       padding: 0;
+      box-sizing: border-box;
       font-family: 'Inter', sans-serif;
     }
 
     body {
-      background:
-        radial-gradient(circle at top, #1b1b2f, var(--bg));
       min-height: 100vh;
+      background: radial-gradient(circle at top, #1b1b2f, var(--bg));
       display: flex;
       justify-content: center;
       align-items: center;
@@ -47,35 +48,33 @@
 
     .card {
       background: var(--card);
-      border-radius: 22px;
       padding: 34px;
-      max-width: 420px;
+      border-radius: 22px;
       width: 100%;
+      max-width: 420px;
       box-shadow:
-        0 0 0 1px rgba(255,255,255,0.04),
-        0 30px 60px rgba(0,0,0,0.6),
+        0 0 0 1px rgba(255,255,255,.04),
+        0 30px 60px rgba(0,0,0,.6),
         0 0 40px var(--glow);
-      animation: appear 0.6s ease;
+      animation: fade 0.6s ease;
     }
 
-    @keyframes appear {
+    @keyframes fade {
       from { opacity: 0; transform: translateY(24px); }
-      to   { opacity: 1; transform: translateY(0); }
+      to { opacity: 1; transform: translateY(0); }
     }
 
     h1 {
       text-align: center;
       font-size: 28px;
-      font-weight: 700;
       margin-bottom: 6px;
-      letter-spacing: 0.3px;
     }
 
     p {
       text-align: center;
-      font-size: 15px;
       color: var(--muted);
-      margin-bottom: 26px;
+      margin-bottom: 24px;
+      font-size: 15px;
     }
 
     .buttons {
@@ -85,85 +84,115 @@
     }
 
     .btn {
-      display: flex;
-      justify-content: center;
-      align-items: center;
       padding: 15px;
       border-radius: 15px;
-      font-size: 16px;
+      text-align: center;
       font-weight: 600;
       color: #fff;
       text-decoration: none;
-      transition: all 0.25s ease;
-      box-shadow: 0 6px 18px rgba(0,0,0,0.35);
+      transition: .25s;
+      box-shadow: 0 6px 18px rgba(0,0,0,.35);
     }
 
     .btn:hover {
       transform: scale(1.07);
       filter: brightness(1.15);
-      box-shadow: 0 12px 28px rgba(0,0,0,0.45);
     }
 
     .btn:active {
-      transform: scale(0.96);
-      opacity: 0.85;
+      transform: scale(.96);
+      opacity: .85;
     }
 
-    /* SOCIAL COLORS */
-    .telegram { background: linear-gradient(135deg, #229ED9, #1b7db3); }
-    .whatsapp { background: linear-gradient(135deg, #25D366, #1ea855); }
-    .viber    { background: linear-gradient(135deg, #7360F2, #5a46d6); }
-    .email    { background: linear-gradient(135deg, #555, #333); }
+    .telegram { background: linear-gradient(135deg,#229ED9,#1b7db3); }
+    .whatsapp { background: linear-gradient(135deg,#25D366,#1ea855); }
+    .viber { background: linear-gradient(135deg,#7360F2,#5a46d6); }
+    .email { background: linear-gradient(135deg,#555,#333); }
 
     footer {
-      margin-top: 22px;
       text-align: center;
       font-size: 13px;
       color: var(--muted);
+      margin-top: 22px;
+    }
+
+    /* POPUP */
+    .popup {
+      position: fixed;
+      inset: 0;
+      background: rgba(0,0,0,.6);
+      display: none;
+      justify-content: center;
+      align-items: center;
+    }
+
+    .popup.active { display: flex; }
+
+    .popup-content {
+      background: var(--card);
+      padding: 28px;
+      border-radius: 18px;
+      width: 90%;
+      max-width: 360px;
+      box-shadow: 0 20px 50px rgba(0,0,0,.6);
+    }
+
+    .popup-content input,
+    .popup-content textarea {
+      width: 100%;
+      margin-bottom: 12px;
+      padding: 12px;
+      border-radius: 10px;
+      border: none;
+      outline: none;
     }
   </style>
 </head>
 
 <body>
 
+  <!-- BIO / LINK-IN-BIO -->
   <div class="card">
     <h1>Solarion.Media</h1>
     <p>Связь • Сотрудничество • Партнёрство</p>
 
     <div class="buttons">
+      <!-- TELEGRAM USERNAME (СТАБИЛЬНО) -->
+      <a class="btn telegram" href="https://t.me/solarion" target="_blank">Telegram</a>
 
-      <!-- TELEGRAM -->
-      <a class="btn telegram"
-         href="https://t.me/+375296909200"
-         target="_blank">
-        Telegram
-      </a>
+      <a class="btn whatsapp" href="https://wa.me/375296909200" target="_blank">WhatsApp</a>
+      <a class="btn viber" href="viber://chat?number=375296909200">Viber</a>
 
-      <!-- WHATSAPP -->
-      <a class="btn whatsapp"
-         href="https://wa.me/375296909200"
-         target="_blank">
-        WhatsApp
-      </a>
-
-      <!-- VIBER -->
-      <a class="btn viber"
-         href="viber://chat?number=375296909200">
-        Viber
-      </a>
-
-      <!-- EMAIL -->
-      <a class="btn email"
-         href="mailto:solarionmedia@gmail.com">
-        Email
-      </a>
-
+      <!-- POPUP TRIGGER -->
+      <a class="btn email" href="#" onclick="openPopup()">Оставить заявку</a>
     </div>
 
-    <footer>
-      © 2025 Solarion.Media
-    </footer>
+    <footer>© 2025 Solarion.Media</footer>
   </div>
+
+  <!-- POPUP FORM (БЕЗ СЕРВЕРА) -->
+  <div class="popup" id="popup">
+    <div class="popup-content">
+      <h3 style="margin-bottom:10px;">Заявка</h3>
+
+      <!-- FORM — работает через Formspree -->
+      <form action="https://formspree.io/f/XXXXXXX" method="POST">
+        <!-- ⚠️ ЗАМЕНИ XXXXXXX на свой ID Formspree -->
+        <input type="email" name="email" placeholder="Ваш email" required />
+        <textarea name="message" placeholder="Сообщение" required></textarea>
+        <button class="btn email" type="submit">Отправить</button>
+      </form>
+    </div>
+  </div>
+
+  <script>
+    function openPopup() {
+      document.getElementById('popup').classList.add('active');
+    }
+    document.getElementById('popup').onclick = e => {
+      if (e.target.id === 'popup') e.target.classList.remove('active');
+    };
+  </script>
 
 </body>
 </html>
