--- a/clients.html
+++ b/clients.html
@@ -11,13 +11,13 @@
   <!-- GOOGLE ANALYTICS
        ⚠️ ОБЯЗАТЕЛЬНО ЗАМЕНИ G-XXXXXXXXXX
        ИНАЧЕ АНАЛИТИКА НЕ РАБОТАЕТ -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXXXXX"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-517112874"></script>
   <script>
     if (typeof window !== "undefined") {
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
-      gtag('config', 'G-XXXXXXXXXX');
+      gtag('config', 'G-517112874');
     }
   </script>
 
@@ -196,3 +196,4 @@
 
 </body>
 </html>
+
