--- a/clients.html
+++ b/clients.html
@@ -176,7 +176,7 @@
       <h3 style="margin-bottom:10px;">Заявка</h3>
 
       <!-- FORM — работает через Formspree -->
-      <form action="https://formspree.io/f/XXXXXXX" method="POST">
+      <form action="https://formspree.io/f/dc3459c3c7d84a90a5b95ca13dda63fe" method="POST">
         <!-- ⚠️ ЗАМЕНИ XXXXXXX на свой ID Formspree -->
         <input type="email" name="email" placeholder="Ваш email" required />
         <textarea name="message" placeholder="Сообщение" required></textarea>
@@ -196,4 +196,5 @@
 
 </body>
 </html>
+
 
